--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,8 @@
       <p class="banner-two">CSE: PL and AI</p>
       <p class="banner-two">CSE Office 3262</p>
       <div class="banner-container">
-        <p class="banner-two"><a href="https://github.com/davidmrdavid">Resume</a></p>
-        <p class="banner-two"><a href="./misc/david_justo_resume2018.pdf">GitHub</a></p>
+        <p class="banner-two"><a href="./misc/david_justo_resume2018.pdf">Resume</a></p>
+        <p class="banner-two"><a href="https://github.com/davidmrdavid">GitHub</a></p>
         <p class="banner-two"><a href="https://twitter.com/davidjustodavid">Twitter</a></p>
         <p class="banner-two"><a href="mailto:david.justo.1996@gmail.com">david.justo.1996@gmail.com</a></p>
 
